<resources>
    <string name="app_name">savePenguin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="Login_fragment_label">SavePenguin</string>
    <string name="Register_fragment_label">Register Page</string>
    <string name="next">Next</string>
    <string name="previous">뒤로가기</string>
    <string name="name">이름</string>
    <string name="email">Email</string>
    <string name="validNumber">인증번호</string>
    <string name="submit">확인</string>
    <string name="myPage">마이페이지</string>
    <string name="penguinShop">펭Shop</string>
    <string name="logout">로그아웃</string>

    <string name="cupname">컵이름</string>
    <string name="type">종류</string>
    <string name="picSubmit">사진 등록</string>
    <string name="week">1 주</string>
    <string name="month">한 달</string>
    <string name="halfyear">반 년</string>
    <string name="year">1 년</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>