<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="84dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view5"
                android:layout_width="64dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView_week"
                android:layout_width="73dp"
                android:layout_height="46dp"
                android:text="@string/week" />

            <TextView
                android:id="@+id/textView_month"
                android:layout_width="26dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:text="@string/month" />

            <TextView
                android:id="@+id/textView_halfyear"
                android:layout_width="26dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:text="@string/halfyear" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="26dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:text="@string/year" />

            <Button
                android:id="@+id/gobackBtn_pointHistory"
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_baseline_arrow_back_24" />

        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="67dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ListView_QRList"
            android:layout_width="match_parent"
            android:layout_height="291dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="243dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>